--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -47,7 +47,7 @@
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins!)
-                                {
+                                {<p>To be able to upload your schedule into google calendar please register using google.</p>
                                     <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
                             </p>
